# LamberMail

./: LogIn.h  LogIn_UI.ui  main.cpp  register.cpp  register.h  ui_Register_UI.h
Client/: CMakeLists.txt  Correos.cpp  Correos.h  Encription.cpp  Encription.h  LogIn.cpp  LogIn.h  README.md  Socket.cpp  Socket.h  Usuario.cpp  Usuario.h  mail.cpp  mail.h  mail.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register.cpp  register.h  ui_LogIn_UI.h  ui_Mail_UI.h  ui_MainWindow_UI.h  ui_Register_UI.h
Server/: AES.cpp  AES.h  Base.cpp  Base.h  CMakeLists.txt  Encription.cpp  RSA.cpp  RSA.h  Server.cpp  Server.h  main.cpp  mainEncriptacion.cpp
Server/Base3/: BaseLamberMail-dump.sql  _localhost_-2024_11_12_20_02_55-dump.sql  _localhost_-2024_11_13_13_24_41-dump.sql  _localhost_-2024_11_13_19_15_41-dump.sql  _localhost_-2024_11_13_23_40_38-dump.sql
